# earthchem-pyclient

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  earthchem.sublime-project  environment.yml  setup.cfg  setup.py
earthchem/: __init__.py  _version.py  documentation.py  formatting.py  geochem.py  pagination.py  query.py  requests.py  validation.py
earthchem/plot/: __init__.py  density.py  geochron.py  spider.py  ternary.py
earthchem/resources/: earthchem_rest_search_documentation.html  igneous_ontology.rdf+xml  soap_search_schema.xsd
earthchem/transform/: __init__.py  additive.py  barycentric.py  centered.py  isometric.py  utilities.py
examples/: README_git_and_notebooks.md  add_notebook.py  plotting.ipynb  rest_queries.ipynb  scratch.ipynb  stream_validation.ipynb
tests/: test_client_data.py  test_earthchem.py  test_formatting.py  test_geochem.py  test_integration.py  test_pagination.py  test_plotting.py  test_transforms.py  test_validation.py
