[aliases]
test=pytest

[tool:pytest]
addopts = --cov-report term --cov=earthchem --cov=cli

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = earthchem/_version.py
versionfile_build = earthchem/_version.py
tag_prefix =
parentdir_prefix = earthchem-

[metadata]
description-file = README.md